# 360

./: .gitignore  README.md
proj1/: .gitignore  PIPELINE.md  README.md  demo_flowchart.mjs  index.py  overview.html  pipeline_flowchart.html  pyproject.toml  requirements.txt
proj1/growrev/: __init__.py  candidate_rules.py  decision node metrics.txt  executor.py  llm_agent.py  mock_data.py  models.py  pipeline_runner.py  policy_engine.py  run_demo.py  session_store.py  test_pipeline.py  web_app.py
proj1/public/: index.html
proj2/: .env.example  README.md  package-lock.json  package.json
proj2/public/: index.html  live-client.js
proj2/src/: call_agent.ts  compliance_gate.ts  database.json  db_service.ts  outcome_service.ts  run_demo.ts  server.ts  student_tools.ts  types.ts  voice_stream_engine.ts
proj2/src/adapters/: gemini_live_bridge.ts
proj2/src/prompts/: agent_persona.ts  vidyagyan_system_prompt.ts
proj3/: .env.example  BUILD_NOTES.md  CLAUDE.md  HOW_IT_WORKS.md  PIPELINE.md  PLAN.md  README.md  WRITEUP.md  package-lock.json  package.json  pipeline_flowchart.html  playwright.config.ts
proj3/e2e/: onboarding.spec.ts  routing.spec.ts
proj3/src/app/: globals.css  layout.tsx  page.tsx
proj3/src/components/: CommunityRegistry.tsx  DispatchTaskList.tsx  DispatchTaskRow.tsx  GatewayForm.tsx  JoinClickLog.tsx  JoinSuccess.tsx  OperatorDashboard.tsx  RejectedRoutingLog.tsx  SimulationPanel.tsx  WhatsAppCommunityPreview.tsx
proj3/src/data/: seed.json
proj3/src/lib/: communities.ts  constants.ts  datastore.ts  dispatch.ts  invite-links.test.ts  router.ts  (+5 more)
(+7 files in other folders)
